--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,7 +2,14 @@
 .status-bar {
     display: flex;
     justify-content: center;
-    padding: 3px 3px;
+    padding: 5px 5px;
+    position: fixed;
+    z-index: 10;
+    top: 0px;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #fff;
+
 }
 
 
