--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,29 @@
 @import "reset.css";
 @import "variable.css";
 
+
 /* components */
 @import "components/status-bar.css";
+@import "components/navigation-bar.css";
+@import "components/header.css";
+@import "components/alt-header.css";
+@import "components/user-component.css";
+@import "components/badge.css";
+@import "components/screen-icons.css";
+@import "components/setting-list.css";
+@import "components/setting-divider.css";
+@import "components/talk-component.css";
+@import "components/no-mobile.css";
+
 
 /*screen*/
 @import "screen/login.css";
+@import "screen/friends.css";
+@import "screen/chats.css";
+@import "screen/search.css";
+@import "screen/ellipsis.css";
+@import "screen/settings.css";
+@import "screen/chat-room.css";
 
 
 
@@ -14,4 +32,13 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+
+.main-screen {
+    margin: 16px 20px;
+}
+
+.scroll::-webkit-scrollbar {
+    display: none;
+  }
 
