--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -1,16 +1,21 @@
+#no-mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    background-color: var(--main-color);
+    position: fixed;
+    top: 0px;
+    z-index: 20;
+    width: 100vw;
+    height: 100vh;
+}
 
 
-@media screen and (min-width:600px) {
+
+@media screen and (max-width:600px) {
     #no-mobile {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 24px;
-        background-color: var(--main-color);
-        position: fixed;
-        top: 0px;
-        z-index: 20;
-        width: 100vw;
-        height: 100vh;
+        display: none;
     }
+
 }
